resolved mobile spacing issue
chrome's responsive view is not accurate. note to self: use safari's responsive view for mobile testing from now on. this took so long to figure out god im tired

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -73,6 +73,7 @@
   
   .banner-content__grid {
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     row-gap: 20px;
     column-gap: 15px;
   }
